force-app/main/default/objects/Asset/fields/Bait_Station_Count__c.field-meta.xml
<CustomField>
    <fullName>Bait_Station_Count__c</fullName>
    <label>Bait Station Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Total Sentricon stations installed on the property perimeter.</description>
</CustomField>