force-app/main/default/objects/Asset/fields/Bait_Station_Hits_30d__c.field-meta.xml
<CustomField>
    <fullName>Bait_Station_Hits_30d__c</fullName>
    <label>Bait Station Hits (30d)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Termite hit count across all bait stations on this property over the last 30 days.</description>
</CustomField>