force-app/main/default/objects/Asset/fields/Bait_Station_State__c.field-meta.xml
<CustomField>
    <fullName>Bait_Station_State__c</fullName>
    <label>Bait Station State</label>
    <type>Picklist</type>
    <description>Current termite-activity state of a Sentricon bait station, captured at last quarterly check.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Untouched</fullName><default>true</default><label>Untouched</label></value>
            <value><fullName>Activity</fullName><default>false</default><label>Activity</label></value>
            <value><fullName>Heavy_Activity</fullName><default>false</default><label>Heavy Activity</label></value>
            <value><fullName>Replaced</fullName><default>false</default><label>Replaced</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>