force-app/main/default/objects/Asset/fields/Conducive_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conducive_Conditions__c</fullName>
    <label>Conducive Conditions</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set true when wood-soil contact, moisture intrusion, or other termite-conducive conditions are observed at the property.</description>
</CustomField>