force-app/main/default/objects/Asset/fields/Conducive_Notes__c.field-meta.xml
<CustomField>
    <fullName>Conducive_Notes__c</fullName>
    <label>Conducive Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
    <description>Tech-captured free-form notes describing conducive conditions observed at the property.</description>
</CustomField>