force-app/main/default/objects/Asset/fields/Days_Since_Last_Service__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Service__c</fullName>
    <label>Days Since Last Service</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Days since the most recent service visit. Updated by service workflow (not a formula).</description>
</CustomField>