force-app/main/default/objects/Asset/fields/EPA_Reg_Number_Last_Used__c.field-meta.xml
<CustomField>
    <fullName>EPA_Reg_Number_Last_Used__c</fullName>
    <label>EPA Reg # Last Used</label>
    <type>Text</type>
    <length>20</length>
    <description>EPA registration number of the most recently applied product on this asset.</description>
</CustomField>