force-app/main/default/objects/Asset/fields/Equipment_Model__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Model__c</fullName>
    <label>Equipment Model</label>
    <type>Text</type>
    <length>80</length>
    <description>Vendor + model identifier (e.g., "Sentricon AlwaysActive", "Mosquito Hunter MH-2400").</description>
</CustomField>