force-app/main/default/objects/Asset/fields/Larvicide_Product__c.field-meta.xml
<CustomField>
    <fullName>Larvicide_Product__c</fullName>
    <label>Larvicide Product</label>
    <type>Text</type>
    <length>80</length>
    <description>Larvicide product currently charged in the mosquito system (e.g., Altosid).</description>
</CustomField>