force-app/main/default/objects/Asset/fields/Last_Bait_Station_Hit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Bait_Station_Hit_Date__c</fullName>
    <label>Last Bait Station Hit Date</label>
    <type>Date</type>
    <description>Date of most recent termite hit observed in any bait station on this property.</description>
</CustomField>