force-app/main/default/objects/Asset/fields/Last_Fertilizer_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Fertilizer_Date__c</fullName>
    <label>Last Fertilizer Date</label>
    <type>Date</type>
    <description>Last lawn fertilizer application date.</description>
</CustomField>