force-app/main/default/objects/Asset/fields/Last_Station_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Last_Station_Inspection__c</fullName>
    <label>Last Station Inspection</label>
    <type>Date</type>
    <description>Most recent quarterly Sentricon station inspection date.</description>
</CustomField>