force-app/main/default/objects/Asset/fields/Last_Treatment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Treatment_DateTime__c</fullName>
    <label>Last Treatment</label>
    <type>DateTime</type>
    <description>Timestamp of the most recent service treatment applied to this asset.</description>
</CustomField>