force-app/main/default/objects/Asset/fields/Lot_Size_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Lot_Size_Sqft__c</fullName>
    <label>Lot Size (Sqft)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Lot size in square feet, used for mosquito-system coverage and lawn-treatment volume estimation.</description>
</CustomField>