force-app/main/default/objects/Asset/fields/NFC_Tag_Id__c.field-meta.xml
<CustomField>
    <fullName>NFC_Tag_Id__c</fullName>
    <label>NFC Tag ID</label>
    <type>Text</type>
    <length>100</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>NFC tag identifier matching the physical bait station / mosquito system tag for field scanning. External ID for matching.</description>
</CustomField>