force-app/main/default/objects/Asset/fields/Nozzle_Count__c.field-meta.xml
<CustomField>
    <fullName>Nozzle_Count__c</fullName>
    <label>Nozzle Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Mosquito Hunter system nozzles deployed on the property.</description>
</CustomField>