force-app/main/default/objects/Asset/fields/Pest_Pressure_Score__c.field-meta.xml
<CustomField>
    <fullName>Pest_Pressure_Score__c</fullName>
    <label>Pest Pressure Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Composite 0–100 pest pressure score driven by trap catches, bait hits, conducive conditions, and seasonality.</description>
</CustomField>