force-app/main/default/objects/Asset/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <description>Residential property classification used for treatment-volume estimation and pricing.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Single_Family</fullName><default>true</default><label>Single Family</label></value>
            <value><fullName>Townhome</fullName><default>false</default><label>Townhome</label></value>
            <value><fullName>Condo</fullName><default>false</default><label>Condo</label></value>
            <value><fullName>Multi_Family</fullName><default>false</default><label>Multi Family</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>