force-app/main/default/objects/Asset/fields/Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Group__c</fullName>
    <label>Service Group</label>
    <type>Text</type>
    <length>40</length>
    <description>Route group / cluster identifier used by ClusterDetector to group co-located properties for cluster-response scheduling.</description>
</CustomField>