force-app/main/default/objects/Asset/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Service Line</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Drives service-line-variant rendering across the masseyFlow orchestrator and step LWCs. Required so every Asset has a known service line. Pest pattern equivalent of telco's Network_Domain__c.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pest</fullName><default>true</default><label>Pest</label></value>
            <value><fullName>Termite</fullName><default>false</default><label>Termite</label></value>
            <value><fullName>Mosquito</fullName><default>false</default><label>Mosquito</label></value>
            <value><fullName>Lawn</fullName><default>false</default><label>Lawn</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>