force-app/main/default/objects/Asset/fields/Soil_Temp_F__c.field-meta.xml
<CustomField>
    <fullName>Soil_Temp_F__c</fullName>
    <label>Soil Temp (F)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>Soil temperature in degrees Fahrenheit at last quarterly check. Drives termite-activity windowing.</description>
</CustomField>