force-app/main/default/objects/Asset/fields/Soil_Treatment_Product__c.field-meta.xml
<CustomField>
    <fullName>Soil_Treatment_Product__c</fullName>
    <label>Soil Treatment Product</label>
    <type>Text</type>
    <length>80</length>
    <description>Termiticide product used in last soil treatment (e.g., Termidor SC, Premise).</description>
</CustomField>