force-app/main/default/objects/Asset/fields/Standing_Water_Sources__c.field-meta.xml
<CustomField>
    <fullName>Standing_Water_Sources__c</fullName>
    <label>Standing Water Sources</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Count of standing-water sources noted on the property (clogged drains, birdbaths, etc.) — driver of mosquito breeding pressure.</description>
</CustomField>