force-app/main/default/objects/Asset/fields/Trap_Catch_Count_24h__c.field-meta.xml
<CustomField>
    <fullName>Trap_Catch_Count_24h__c</fullName>
    <label>Trap Catch Count (24h)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Mosquito trap catch count over the last 24 hours.</description>
</CustomField>