force-app/main/default/objects/Asset/fields/Treatment_Perimeter_LinearFt__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Perimeter_LinearFt__c</fullName>
    <label>Treatment Perimeter (Linear Feet)</label>
    <type>Number</type>
    <precision>7</precision>
    <scale>0</scale>
    <description>Property treatment perimeter measured in linear feet (drives chemical-volume estimation for soil treatments and perimeter sprays).</description>
</CustomField>