force-app/main/default/objects/Asset/fields/Turf_Type__c.field-meta.xml
<CustomField>
    <fullName>Turf_Type__c</fullName>
    <label>Turf Type</label>
    <type>Picklist</type>
    <description>Lawn turf species for fertilizer + insect-control product selection.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>St_Augustine</fullName><default>false</default><label>St. Augustine</label></value>
            <value><fullName>Bahia</fullName><default>false</default><label>Bahia</label></value>
            <value><fullName>Bermuda</fullName><default>false</default><label>Bermuda</label></value>
            <value><fullName>Zoysia</fullName><default>false</default><label>Zoysia</label></value>
            <value><fullName>Centipede</fullName><default>false</default><label>Centipede</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>